# x32_osc_state

./: .gitignore  Cargo.toml  README.md
examples/: state_machine.rs
src/: lib.rs
src/enums/: mod.rs
src/osc/: mod.rs  packet.rs  types.rs
src/state/: faders.rs  mod.rs
src/x32/: faders.rs  from_console.rs  mod.rs  to_console.rs  updates.rs  util.rs
tests/: osc_buffer.rs  osc_bundles.rs  osc_messages.rs  osc_types.rs  x32_do_packet_node.rs  x32_do_packet_standard.rs  x32_do_packet_util.rs  x32_get_update.rs  x32_serialize.rs  x32_state.rs
tests/buffer_common/: mod.rs
