[package]
authors = ["JTSage <jtsage@gmail.com>"]
description = "X32 State Tracker via Open Sound Control"
documentation = "https://docs.rs/x32_osc_state"
edition = "2021"
homepage = "https://github.com/jtsage/x32_osc_state"
keywords = ["parse", "osc"]
license = "ISC"
name = "x32_osc_state"
readme = "README.md"
repository = "https://github.com/jtsage/x32_osc_state"
version = "0.0.1"

[dependencies]
lazy_static = "1.5.0"
regex = "1.11.1"

[dev-dependencies]
chrono = "0.4.39"
rand = "0.8.5"
tokio = { version = "1.43.0", features = ["full"] }
