[package]
authors = ["JTSage <jtsage@gmail.com>"]
description = "X32 State Tracker via Open Sound Control"
documentation = "https://docs.rs/x32_osc_state"
edition = "2021"
homepage = "https://github.com/jtsage/x32_osc_state"
keywords = ["parse", "osc"]
license = "ISC"
name = "x32_osc_state"
readme = "README.md"
repository = "https://github.com/jtsage/x32_osc_state"
version = "0.1.0"

[dependencies]
lazy_static = "1.5.0"
regex = "1.11.1"

[dev-dependencies]
chrono = "0.4.39"
rand = "0.8.5"
tokio = { version = "1.43.0", features = ["full"] }

[lints.clippy]
pedantic = "warn"
allow_attributes = "warn"
default_trait_access = "warn"
derive_partial_eq_without_eq = "warn"
equatable_if_let = "warn"
from_iter_instead_of_collect = "warn"
if_not_else = "warn"
if_then_some_else_none = "warn"
implicit_clone = "warn"
inefficient_to_string = "warn"
manual_is_variant_and = "warn"
manual_let_else = "warn"
manual_ok_or = "warn"
map_unwrap_or = "warn"
missing_docs_in_private_items = "warn"
needless_collect = "warn"
needless_pass_by_ref_mut = "warn"
option_if_let_else = "warn"
or_fun_call = "warn"
partial_pub_fields = "warn"
redundant_type_annotations = "warn"
renamed_function_params = "warn"
return_self_not_must_use = "warn"
single_call_fn = "warn"
str_to_string = "warn"
string_to_string = "warn"
suspicious_operation_groupings = "warn"
unseparated_literal_suffix = "warn"
unwrap_in_result = "warn"
unwrap_used = "warn"
use_self = "warn"